Finish Toy Demonstrator

--- a/control_demon_partyA.ipynb
+++ b/control_demon_partyA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,9 @@
     "\n",
     "def getExecutionResult(signalStation, clientId, taskId, wait=True):\n",
     "    url = signalStation + \"/client/\" + str(clientId) + \"/task/\" + str(taskId) + \"/result\"\n",
-    "    print(\"Results link:\", url)\n",
+    "    print(url)\n",
     "    jsonResult = json.loads(requests.get(url).text)\n",
-    "     \n",
+    "    \n",
     "    while len(jsonResult)==0 & wait:\n",
     "        time.sleep(2)\n",
     "        jsonResult = json.loads(requests.get(url).text)\n",
@@ -96,14 +96,14 @@
        "  'id': 1,\n",
        "  'institute': 'Maastricht University',\n",
        "  'ip': '192.168.96.1',\n",
-       "  'last_seen': '2019-05-28 15:08:57.617189',\n",
+       "  'last_seen': '2019-05-29 14:03:08.199802',\n",
        "  'name': 'The Maastricht Study'},\n",
        " {'country': 'Netherlands',\n",
        "  'email': 'johan.vansoest@maastro.nl',\n",
        "  'id': 2,\n",
        "  'institute': 'MAASTRO Clinic',\n",
        "  'ip': '192.168.96.1',\n",
-       "  'last_seen': '2019-05-28 15:08:56.451742',\n",
+       "  'last_seen': '2019-05-29 14:03:06.388532',\n",
        "  'name': 'VWData Station Maastro'}]"
       ]
      },
@@ -113,8 +113,7 @@
     }
    ],
    "source": [
-    "getStations(signalStation)\n",
-    "# print('You are data party A')"
+    "getStations(signalStation)"
    ]
   },
   {
@@ -126,23 +125,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stage_A1(i):\n",
+    "def stage_A1(event):\n",
     "    ### Read data and define your \"train\" (application) \n",
-    "    inputA = input_data_A.value.split(';')\n",
-    "    columnsNum = len(inputA)\n",
-    "    item = []\n",
-    "    for i in range(0, columnsNum):\n",
-    "        item.append([int(i) for i in inputA[0].split(',')])\n",
+    "#     inputA = input_data_A.value.split(';')\n",
+    "#     columnsNum = len(inputA)\n",
+    "#     item = []\n",
+    "#     for i in range(0, columnsNum):\n",
+    "#         item.append([int(i) for i in inputA[0].split(',')])\n",
     "\n",
     "    inputData = {\n",
-    "        \"stage\": 1,\n",
-    "        \"dataA\" : item\n",
+    "        \"stage\": 1\n",
     "    }\n",
-    "    print(item)\n",
+    "\n",
     "    myTrain = defineTrain(\"sophia921025/ppdml_demon\", inputData, 1)\n",
     "\n",
     "    ### Execute the train on client\n",
@@ -156,7 +154,7 @@
     "    result = json.loads(results[0][\"response\"])\n",
     "    print(result.keys())\n",
     "\n",
-    "    return explainPicA()\n",
+    "    return # explainPicA()\n",
     "\n",
     "def explainPicA():\n",
     "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic3.png?raw=true\", width=600, height=600))\n",
@@ -167,42 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    1\n",
-       "1    2\n",
-       "2    4\n",
-       "Name: 1, dtype: int64"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_A = pd.DataFrame.from_records([[1,2,3],[1,2,4]]).transpose()\n",
-    "df_A.iloc[:,-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec6409b95a634e4ea41f93a8fb8c9e57",
+       "model_id": "60245383f02944b2bc739201f5ff8bae",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Text(value='1,2,3,4,5;2,3,2,3,2', description='Input data A (comma separate): ', layout=…"
+       "Text(value='', description='Input data A (comma separate): ', layout=Layout(height='30px', width='50%'), style…"
       ]
      },
      "metadata": {},
@@ -210,23 +184,42 @@
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d58f164d460b42a6a3d7d1dea03f4823",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "<function __main__.stage_A1>"
+       "Button(button_style='success', description='Run', style=ButtonStyle())"
       ]
      },
-     "execution_count": 25,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task submitted with ID: 311\n",
+      "http://vwdata.personalhealthtrain.net/client/1/task/311/result\n",
+      "Stage: 1\n",
+      "\n",
+      "\n",
+      "=======================INTERNAL FILE LOG===================== \n",
+      "\n",
+      "dict_keys(['sumNoiseBytes'])\n"
+     ]
     }
    ],
    "source": [
     "#### Demon: Give your data here: ####\n",
     "style = {'description_width': 'initial'}\n",
     "uniLayout = Layout(width='50%', height='30px')\n",
-    "input_data_A = widgets.Text(value='1,2,3,4,5;2,3,2,3,2', description='Input data A (comma separate): ', style=style, layout=uniLayout)\n",
-    "# button1 = Button(description=\"Run\", button_style='success', value=None)\n",
+    "input_data_A = widgets.Text(value='', description='Input data A (comma separate): ', style=style, layout=uniLayout)\n",
+    "button_A1 = Button(description=\"Run\", button_style='success', value=None)\n",
     "\n",
-    "interact_manual(stage_A1, i=input_data_A)"
+    "button_A1.on_click(stage_A1)\n",
+    "display(input_data_A, button_A1)"
    ]
   },
   {
@@ -254,7 +247,7 @@
     "    resultSecond = json.loads(results[0][\"response\"])\n",
     "\n",
     "    resultSecond[\"stage\"] = 3\n",
-    "    myThirdTrain = defineTrain(\"sophia921025/fairhealth_test\", resultSecond, 1)\n",
+    "    myThirdTrain = defineTrain(\"sophia921025/ppdml_demon\", resultSecond, 1)\n",
     "\n",
     "    clientId = 1\n",
     "    taskId = requestExecution(signalStation, clientId, myThirdTrain)\n",
@@ -274,7 +267,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0477b0b93b22405b9946c62521c3c3eb",
+       "model_id": "f7501e7dec604d27a3b56d22322b18c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -288,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05d2a2980f4a4594998b5c00efe289aa",
+       "model_id": "e1470877813c49cc86d80a00b5c1b235",
        "version_major": 2,
        "version_minor": 0
       },
@@ -302,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a7492940b8b405b9a7de9e54a868e2f",
+       "model_id": "0812093f68fc4913aef540ffe03265dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,9 +310,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results link: http://vwdata.personalhealthtrain.net/client/2/task/150/result\n",
-      "Task submitted with ID: 151\n",
-      "Results link: http://vwdata.personalhealthtrain.net/client/1/task/151/result\n",
+      "http://vwdata.personalhealthtrain.net/client/2/task/312/result\n",
+      "Task submitted with ID: 313\n",
+      "http://vwdata.personalhealthtrain.net/client/1/task/313/result\n",
       "Stage: 3\n",
       "\n",
       "\n",
@@ -343,7 +336,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "myData = pd.DataFrame.from_records([[0,35,181,25,1,143],[1,60,182,18,3,454],[1,41,172,23,4,54],[0,55,184,30,4,263],[0,35,176,28,2,223],\\\n",
+    "[1,56,166,21,4,534],[0,35,181,25,1,143],[1,60,182,18,3,454],[1,41,172,23,4,54],[0,55,184,30,4,263],\\\n",
+    "[0,35,176,28,2,223],[1,56,166,21,4,534],[0,35,181,25,1,143],[1,60,182,18,3,454],[1,41,172,23,4,54],\\\n",
+    "[0,55,184,30,4,263],[0,35,176,28,2,223],[1,56,166,21,4,534],[0,35,181,25,1,143],[1,60,182,18,3,454]])\n",
+    "myData.columns = [\"gender\",\"age\",\"height\",\"bmi\",\"edu\",\"income\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_centralized = np.concatenate((myDataA, myDataB.drop('diag_3', axis=1)), axis=1)\n",
+    "Y = myData.iloc[:,-1]\n",
+    "X_centralized = myData.drop(\"income\", axis=1)\n",
+    "from sklearn import linear_model\n",
+    "regr = linear_model.LinearRegression(fit_intercept=True, normalize=True)\n",
+    "regr.fit(X_centralized, Y)\n",
+    "\n",
+    "# The coefficients\n",
+    "print('Coefficients: \\n', regr.coef_)\n",
+    "print('Intercept: \\n', regr.intercept_)"
+   ]
   },
   {
    "cell_type": "code",
