--- a/control_demon_partyB.ipynb
+++ b/control_demon_partyB.ipynb
@@ -21,15 +21,8 @@
     "from IPython.core.display import HTML \n",
     "\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import interact, interactive, interact_manual, Layout, Button"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from ipywidgets import interact, interactive, interact_manual, Layout, Button\n",
+    "\n",
     "signalStation = \"http://vwdata.personalhealthtrain.net\"\n",
     "\n",
     "def getStations(signalStation):\n",
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +74,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,18 +96,18 @@
        "  'id': 1,\n",
        "  'institute': 'Maastricht University',\n",
        "  'ip': '192.168.96.1',\n",
-       "  'last_seen': '2019-05-28 15:09:30.599025',\n",
+       "  'last_seen': '2019-05-29 14:03:20.102675',\n",
        "  'name': 'The Maastricht Study'},\n",
        " {'country': 'Netherlands',\n",
        "  'email': 'johan.vansoest@maastro.nl',\n",
        "  'id': 2,\n",
        "  'institute': 'MAASTRO Clinic',\n",
        "  'ip': '192.168.96.1',\n",
-       "  'last_seen': '2019-05-28 15:09:31.622865',\n",
+       "  'last_seen': '2019-05-29 14:03:20.888818',\n",
        "  'name': 'VWData Station Maastro'}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,15 +134,16 @@
     "    results = getExecutionResult(signalStation, input_clientID.value, input_taskID.value)\n",
     "    result = json.loads(results[0][\"response\"])\n",
     "\n",
-    "    inputB = input_data_B.value.split(';')\n",
-    "    columnsNum = len(inputB)\n",
-    "    item = []\n",
-    "    for i in range(0, columnsNum):\n",
-    "        item.append([int(i) for i in inputB[0].split(',')])\n",
+    "#     inputB = input_data_B.value.split(';')\n",
+    "#     columnsNum = len(inputB)\n",
+    "#     item = []\n",
+    "#     for i in range(0, columnsNum):\n",
+    "#         item.append([int(i) for i in inputB[0].split(',')])\n",
     "\n",
     "    \n",
     "    result[\"stage\"] = 2\n",
-    "    result[\"dataB\"] = item\n",
+    "#     result[\"dataB\"] = item\n",
+    "\n",
     "    mySecondTrain = defineTrain(\"sophia921025/ppdml_demon\", result, 1)\n",
     "\n",
     "    clientId = 2\n",
@@ -161,23 +155,22 @@
     "    resultSecond = json.loads(resultsSecond[0][\"response\"])\n",
     "    print(resultSecond.keys())\n",
     "\n",
-    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic7.png?raw=true\", width=600, height=600))\n",
-    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic8.png?raw=true\", width=600, height=600))\n",
-    "    display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic9.png?raw=true\", width=600, height=600))\n",
+    "#     display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic7.png?raw=true\", width=600, height=600))\n",
+    "#     display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic8.png?raw=true\", width=600, height=600))\n",
+    "#     display(Image(url= \"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic9.png?raw=true\", width=600, height=600))\n",
     "\n",
-    "    sumNoisesAB = resultSecond[\"sumNoisesAB\"]\n",
-    "    event.value = sumNoisesAB\n"
+    "    event.value = resultSecond[\"sumNoisesAB\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3d561f05884499b9d4d8114a0e42bd5",
+       "model_id": "f0a8b05e90234104b40a4690c89940c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,12 +184,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e465613370445589bebab5033212757",
+       "model_id": "bd120399b35a4dbea7acbf4c08997173",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "BoundedIntText(value=150, description='Retrieve intermediate result from Task ID:', layout=Layout(height='30px…"
+       "BoundedIntText(value=279, description='Retrieve intermediate result from Task ID:', layout=Layout(height='30px…"
       ]
      },
      "metadata": {},
@@ -205,7 +198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af6f031a1a0941e4b6f793675d844487",
+       "model_id": "0b8be8eec6b24506a81a9f3b04726d38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c02f6d6091074df889aa86b909e52732",
+       "model_id": "86d3b3d66e3341ada437e247f4b0fb01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,9 +227,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://vwdata.personalhealthtrain.net/client/1/task/149/result\n",
-      "Task submitted with ID: 150\n",
-      "http://vwdata.personalhealthtrain.net/client/2/task/150/result\n",
+      "http://vwdata.personalhealthtrain.net/client/1/task/311/result\n",
+      "Task submitted with ID: 312\n",
+      "http://vwdata.personalhealthtrain.net/client/2/task/312/result\n",
       "Stage: 2\n",
       "\n",
       "\n",
@@ -244,42 +237,6 @@
       "\n",
       "dict_keys(['sumNoisesAB', 'sumNoisesB'])\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic7.png?raw=true\" width=\"600\" height=\"600\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic8.png?raw=true\" width=\"600\" height=\"600\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"https://github.com/sunchang0124/PHTDemon/blob/master/Pics/demonPic9.png?raw=true\" width=\"600\" height=\"600\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -288,8 +245,8 @@
     "uniLayout = Layout(width='50%', height='30px')\n",
     "\n",
     "input_clientID = widgets.BoundedIntText(value=1,max=100,description='Retrieve intermediate result from Client ID:',disabled=False, style=style, layout=uniLayout)\n",
-    "input_taskID = widgets.BoundedIntText(value=150,max=10000,description='Retrieve intermediate result from Task ID:',disabled=False, style=style, layout=uniLayout)\n",
-    "input_data_B = widgets.Text(value='1,2,3,2,1;2,2,1,4,3', description='Input data B (comma separate): ', style=style, layout=uniLayout)\n",
+    "input_taskID = widgets.BoundedIntText(value=279,max=10000,description='Retrieve intermediate result from Task ID:',disabled=False, style=style, layout=uniLayout)\n",
+    "input_data_B = widgets.Text(value='', description='Input data B (comma separate): ', style=style, layout=uniLayout)\n",
     "button1 = Button(description=\"Run\", button_style='success', value=None)\n",
     "\n",
     "button1.on_click(stage_B1)\n",
@@ -314,18 +271,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def stage_B2(event2):\n",
     "    results = getExecutionResult(signalStation, input_clientID.value, input_taskID.value)\n",
     "    resultThird = json.loads(results[0][\"response\"])\n",
-    "\n",
+    "    \n",
     "    resultThird[\"stage\"] = 4\n",
     "    resultThird[\"sumNoisesAB\"] = sumNoisesAB\n",
     "    \n",
-    "    myFourthTrain = defineTrain(\"sophia921025/fairhealth_test\", resultThird, 1)\n",
+    "    myFourthTrain = defineTrain(\"sophia921025/ppdml_demon\", resultThird, 1)\n",
     "    print(resultThird.keys())\n",
     "\n",
     "    clientId = 2\n",
@@ -339,13 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6686998d5cfc48a2b82f3cd3ec82cb73",
+       "model_id": "4a32c9616e174ad1a86cc837927d85ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,12 +316,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bddf097f848042f58d6f4c10ded6a1d6",
+       "model_id": "5ac6f48391a243008332acb06d8f09c9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "BoundedIntText(value=151, description='Retrieve intermediate result from Task ID:', layout=Layout(height='30px…"
+       "BoundedIntText(value=207, description='Retrieve intermediate result from Task ID:', layout=Layout(height='30px…"
       ]
      },
      "metadata": {},
@@ -373,7 +330,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f73293b56f1e4029bbc65b8e402a1629",
+       "model_id": "cb89f0d6fdbd4c59875d53e20a606bcc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,31 +345,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://vwdata.personalhealthtrain.net/client/1/task/151/result\n",
+      "http://vwdata.personalhealthtrain.net/client/1/task/313/result\n",
       "dict_keys(['randomsSumSet', 'sumNoisesBARand', 'XaTXa', 'stage', 'sumNoisesAB'])\n",
-      "Task submitted with ID: 152\n",
-      "http://vwdata.personalhealthtrain.net/client/2/task/152/result\n",
+      "Task submitted with ID: 314\n",
+      "http://vwdata.personalhealthtrain.net/client/2/task/314/result\n",
       "Stage: 4\n",
-      "XaTXa: 10 - 10\n",
-      "XbTXa: 10 - 1\n",
-      "XaTXb: 4 - 1\n",
-      "XbTXb: 5 - 1\n",
-      "XbTXb_exclY: 4 - 1\n",
       "Coefficients: \n",
-      " [[-1.15678321e+01]\n",
-      " [-4.89996193e+00]\n",
-      " [-6.35477806e+01]\n",
-      " [-2.85351329e+00]\n",
-      " [ 2.17420659e-01]\n",
-      " [ 3.14462563e+00]\n",
-      " [ 1.02737671e+02]\n",
-      " [-1.13506411e+01]\n",
-      " [-3.14968709e+02]\n",
-      " [-2.84356047e+02]\n",
-      " [ 1.00324224e+02]\n",
-      " [ 7.45891879e-01]\n",
-      " [ 1.47713293e-02]]\n",
-      "Intercept:  -9.219794829436864\n",
+      " [[-0.2127747 ]\n",
+      " [ 0.15097127]\n",
+      " [ 2.56519877]\n",
+      " [77.88388039]]\n",
+      "Intercept:  -28.34386609971824\n",
       "\n",
       "\n",
       "=======================INTERNAL FILE LOG===================== \n",
@@ -424,7 +367,7 @@
     "sumNoisesAB = button1.value\n",
     "\n",
     "input_clientID = widgets.BoundedIntText(value=1,max=100,description='Retrieve intermediate result from Client ID:',disabled=False, style=style, layout=uniLayout)\n",
-    "input_taskID = widgets.BoundedIntText(value=151,max=10000,description='Retrieve intermediate result from Task ID:',disabled=False, style=style, layout=uniLayout)\n",
+    "input_taskID = widgets.BoundedIntText(value=207,max=10000,description='Retrieve intermediate result from Task ID:',disabled=False, style=style, layout=uniLayout)\n",
     "button2 = Button(description=\"Run\", button_style='success', value=None)\n",
     "\n",
     "button2.on_click(stage_B2)\n",
